@@ -135,9 +135,10 @@
    permtonum
    numtoperm
    factorialmod
-   is_totient
-   is_fundamental
-   is_polygonal
 
 - logint test
 - is_carmichael test
+- is_polygonal test
+- polygonal_nth test
+- is_fundamental test
+- is_totient test
